--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,11 +46,17 @@
 
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item>"><a class="nav-link" href="/">Dashboard</a></li>
-          <li class="nav-item>"><a class="nav-link" href="/">Simulate</a></li>
+          <li class="nav-item>">
+            <a class="nav-link" href="/dashboard">Dashboard</a>
+          </li>
+          <li class="nav-item>">
+            <a class="nav-link" href="/simulate">Simulate</a>
+          </li>
         </ul>
         <ul class="navbar-nav ml-auto mt-2">
-          <li class="nav-item"><a class="nav-link" href="#">Log Out</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Log Out</a>
+          </li>
         </ul>
 
         {% else %}
