--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,6 @@
     />
   </div>
 
-  <button class="btn btn-primary" type="submit">Register</button>
+  <button class="btn btn-primary" type="submit">Login</button>
 </form>
 {% endblock %}
